# pascal2js

./: README  pas2js.cabal  pascal2js.cabal  tmp.js  tmp.pas
js/: data.js  index.html  predef.js  rt.js  rt_functions.js  taskman.js
samples/: GRAPH.PAS  PAPOROTN.PAS  PONG.PAS  prog1.pas  unit1.pas
samples/paporotn-out/: override.js  paporotn.html  paporotn.js
src/: JSGen.hs  Main.hs  Parser.hs  Types.hs  Works.hs  beautify.js
