name: pas2js
version: 0.0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright:
maintainer:
build-depends: base , parsec -any, directory, containers, mtl, monad-loops, HJavaScript, process
stability:
homepage:
package-url:
bug-reports:
synopsis:
description:  
             .
             .
             .
             .
category:
author:
tested-with:
data-files:
data-dir: ""
extra-source-files: Parser Types JSGen
extra-tmp-files:
 
executable: pas2js
main-is: Main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules:
ghc-prof-options:
ghc-shared-options:
ghc-options: -fno-warn-deprecated-flags
hugs-options:
nhc98-options:
jhc-options:
